<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="500dp"
        android:layout_height="25dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txtSchoolYearStart"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/_2019"></TextView>

        <TextView
            android:id="@+id/txtDash"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/dash"></TextView>

        <TextView
            android:id="@+id/txtSchoolYearEnd"
            android:layout_width="39dp"
            android:layout_height="26dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/_2020"></TextView>

        <TextView
            android:id="@+id/txtSchoolYearSemester"
            android:layout_width="100dp"
            android:layout_height="26dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/_1st_semester"
            android:textColor="#716E71"></TextView>

    </LinearLayout>

</RelativeLayout>